# dps.training_qrcode_generator

./: .gitignore  README.md  generate_container_qr_codes.py  generate_patient_qr_codes.py  generate_vehicle_qr_codes.py  patient.csv  pyproject.toml
components/tex_base/: begin_a4.tex  begin_a5.tex
components/tex_content/: block_patient_walking.tex  template_container.tex  template_patient.tex  template_vehicle.tex
input/: containers.csv  containers_per_vehicle_type.csv  patients.csv  vehicles.csv  vehicles_containers.csv  vehicles_generic.csv  vehicles_potsdam.csv
latex_test/: base_page_with_icon.tex  base_patient_a4.tex  base_vehicle_a4.tex
test/: base_container_a5.tex  base_page.tex  base_patient_a4.tex  base_vehicle_a4.tex
