[tool.poetry]
name = "dps-training-qrcode-generator"
version = "0.1.0"
description = ""
authors = ["Christian Zöllner <christian.zoellner@hpi.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
